# wit/app/demo/v1/api/wit.py
@@ -2,7 +2,7 @@ import requests
 from .credentials import WIT_TOKEN
 from .dentist_api import get_dentists
 from .dentist_api import get_dentists_info
-from .timeslot_api import get_yelp_info
+from .timeslot_api import get_timeslot_info
 
 
 def wit(expression):
@@ -21,6 +21,12 @@ def wit(expression):
             dentistName = json_result['entities']['wit$contact:contact'][0]['body']
             print('Name detected: {}'.format(dentistName))
             answer = get_dentists_info(dentistName)
+
+        if json_result['intents'][0]['name'] == 'getTimeslots':
+            if json_result['entities']['wit$contact:contact'][0]['body'] in ['Dr. Oliver','Dr. Manish','Dr. Virdi']:
+                dentistName=json_result['entities']['wit$contact:contact'][0]['body']
+                print('Name detected: {}'.format(dentistName))
+            answer = get_timeslot_info()
     except:
         answer = 'I do not understand :('
     return answer
